--- a/styles/index.css
+++ b/styles/index.css
@@ -229,8 +229,12 @@ button {
 }
 
 body {
+  position: relative;
   min-width: 320px;
   font-family: "Suisse Intl", sans-serif;
+}
+body.no-scroll {
+  overflow: hidden;
 }
 
 .wrapper {
@@ -370,6 +374,63 @@ body {
 .header__btn {
   padding-right: 51px;
 }
+.header__burger-btn {
+  display: none;
+}
+.header__burger-btn:focus {
+  outline: none;
+}
+
+.ham {
+  width: 64px;
+  height: 64px;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  transition: transform 400ms;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.hamRotate.active {
+  transform: rotate(45deg);
+}
+
+.ham8 .top {
+  stroke-dasharray: 40 160;
+}
+
+.ham8 .middle {
+  stroke-dasharray: 40 142;
+  transform-origin: 50%;
+  transition: transform 400ms;
+}
+
+.ham8 .bottom {
+  stroke-dasharray: 40 85;
+  transform-origin: 50%;
+  transition: transform 400ms, stroke-dashoffset 400ms;
+}
+
+.ham8.active .top {
+  stroke-dashoffset: -64px;
+}
+
+.ham8.active .middle {
+  transform: rotate(90deg);
+}
+
+.ham8.active .bottom {
+  stroke-dashoffset: -64px;
+}
+
+.line {
+  fill: none;
+  transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+  stroke: #ff7707;
+  stroke-width: 6;
+  stroke-linecap: round;
+}
 
 .logo {
   width: 107px;
@@ -392,6 +453,49 @@ body {
 }
 .tel-link:hover {
   color: #111;
+}
+
+.mobile-menu {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: calc(100% - 67px);
+  background-color: #fff;
+  z-index: 20;
+  padding: 32px;
+  top: 67px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: start;
+  overflow-y: auto;
+  gap: 32px;
+  transform: translateX(100%);
+  visibility: hidden;
+  opacity: 0;
+  border-top: 1px solid rgba(153, 153, 153, 0.2);
+  transition: 0.43s;
+}
+.mobile-menu.active {
+  transform: translateX(0%);
+  opacity: 1;
+  visibility: visible;
+}
+.mobile-menu__nav {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: start;
+  gap: 24px;
+}
+.mobile-menu__nav-link {
+  font-size: 18px;
+}
+.mobile-menu__btn {
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-top: auto;
 }
 
 .promo-section__wrapper {
@@ -533,6 +637,9 @@ body {
   color: #ff7707;
 }
 .advantages-section__list-item-img {
+  width: 100%;
+  max-width: 320px;
+  margin: auto;
   -o-object-fit: contain;
      object-fit: contain;
 }
@@ -1750,4 +1857,397 @@ body {
   background-repeat: no-repeat;
   background-position: left center;
   background-size: contain;
+}
+
+@media (max-width: 1280px) {
+  .header {
+    margin-bottom: 96px;
+  }
+  .header__nav-link {
+    font-size: 16px;
+  }
+  .header__social-link {
+    margin-right: 4px;
+  }
+  .header__tel-link {
+    margin-right: 24px;
+  }
+  .header__btn {
+    padding-right: 25px;
+    gap: 14px;
+  }
+  .btn svg {
+    width: 18px;
+    height: 18px;
+  }
+  .btn__caption {
+    font-size: 16px;
+  }
+  .tel-link {
+    font-size: 16px;
+  }
+  .heading {
+    font-size: 72px;
+  }
+  .subheading {
+    font-size: 48px;
+  }
+  .promo-section__video {
+    height: 640px;
+  }
+  p,
+  .text,
+  .about-section__text-content p,
+  .dev-section__text-content p {
+    font-size: 18px;
+  }
+}
+@media (max-width: 1196px) {
+  .promo-section__video-wrapper::before, .promo-section__video-wrapper::after {
+    width: 220px;
+    height: 220px;
+  }
+  .advantages-section__list {
+    grid-template-rows: repeat(2, 374px);
+  }
+  .advantages-section__list-item {
+    padding: 32px 24px;
+  }
+  .advantages-section__list-item-heading {
+    font-size: 24px;
+  }
+  .advantages-section__list-item-subheading {
+    font-size: 18px;
+  }
+  .advantages-section__list-item-count {
+    font-size: 72px;
+  }
+  .advantages-section__list-item-img {
+    max-width: 196px;
+  }
+  .about-section {
+    padding: 0;
+  }
+  .about-section__wrapper {
+    margin-bottom: 64px;
+  }
+  .about-section__overlay {
+    min-height: 640px;
+  }
+  .about-section__overlay-popup {
+    max-width: 256px;
+    padding: 16px;
+  }
+  .about-section__overlay-popup-img {
+    height: 120px;
+  }
+  .about-section__overlay-popup-btn {
+    padding: 10px 24px;
+  }
+  .about-section__overlay-message {
+    padding-bottom: 79px;
+  }
+  .about-section__overlay-message-text {
+    padding: 12px 17px;
+    font-size: 18px;
+  }
+  .about-section__overlay-message_second {
+    right: 24%;
+    bottom: 36%;
+  }
+  .owner-section {
+    padding: 120px 0;
+  }
+  .owner-section__review-text {
+    max-width: 720px;
+  }
+  .owner-section__name {
+    font-size: 28px;
+  }
+  .owner-section__who {
+    font-size: 16px;
+  }
+  .dev-section__list {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(2, 280px);
+  }
+  .dev-section__list-item {
+    padding: 24px;
+  }
+  .dev-section__list-item-img {
+    height: 180px;
+  }
+  .dev-section__list-item-heading, .dev-section__list-item-hidden-text {
+    font-size: 24px;
+  }
+  .dev-section__list-item-hidden-text {
+    font-size: 24px;
+  }
+  .projects-section__swiper {
+    max-width: 540px;
+    height: 640px;
+  }
+  .projects-section__swiper-slide {
+    border-radius: 24px;
+    overflow: hidden;
+  }
+  .contacts-section__info-address {
+    font-size: 28px;
+  }
+  .contacts-section__profile-heading {
+    font-size: 20px;
+  }
+  .contacts-section__profile-text .contacts-section__profile-link {
+    font-size: 16px;
+  }
+}
+@media (max-width: 1096px) {
+  .header {
+    margin-top: 0;
+  }
+  .header__btn, .header__nav {
+    display: none;
+  }
+  .header__burger-btn {
+    display: block;
+  }
+  .header__wrapper {
+    padding-right: 0;
+  }
+}
+@media (max-width: 1024px) {
+  .header {
+    margin-bottom: 48px;
+  }
+  .heading {
+    font-size: 48px;
+  }
+  .promo-section__video {
+    height: 480px;
+  }
+  .advantages-section__list {
+    grid-template-rows: repeat(2, 307px);
+  }
+  .advantages-section__list-item-heading {
+    font-size: 18px;
+  }
+  .advantages-section__list-item-img {
+    max-width: 160px;
+  }
+  .contacts-section__info-address {
+    font-size: 20px;
+  }
+  .contacts-section__info-body {
+    gap: 40px;
+  }
+  .contacts-section__socials {
+    gap: 16px;
+  }
+}
+@media (max-width: 920px) {
+  .subheading {
+    font-size: 36px;
+  }
+  p,
+  .text,
+  .about-section__text-content p,
+  .dev-section__text-content p {
+    font-size: 16px;
+  }
+  .advantages-section__list {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 307px);
+  }
+  .about-section__wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+  }
+  .about-section__overlay-message_second {
+    right: unset;
+  }
+  .about-section__overlay-message-text {
+    font-size: 16px;
+  }
+  .owner-section__review {
+    background-size: 32px;
+  }
+  .dev-section__content {
+    margin-bottom: 48px;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+  }
+  .dev-section__list {
+    grid-template-rows: repeat(3, 240px);
+  }
+  .dev-section__list-item-img {
+    height: 120px;
+  }
+  .projects-section {
+    margin: 72px 0;
+  }
+  .projects-section__swiper {
+    max-width: 420px;
+    height: 501px;
+  }
+  .contacts-section__wrapper {
+    gap: 64px;
+  }
+  .contacts-section__info {
+    max-width: unset;
+  }
+  .contacts-section__info-text {
+    font-size: 16px;
+  }
+  .contacts-section__info-body {
+    padding: 32px 0;
+  }
+  .contacts-section__map {
+    max-width: unset;
+    height: 360px;
+  }
+  .contacts-section__wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+  }
+  .contacts-section__profile {
+    gap: 18px;
+  }
+  .contacts-section__profile-avatar {
+    width: 72px;
+    height: 72px;
+  }
+  .contacts-section__profile-heading {
+    font-size: 18px;
+  }
+  .contacts-section__profile-text, .contacts-section__profile-link {
+    font-size: 16px;
+  }
+}
+@media (max-width: 767px) {
+  .promo-section__wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+  }
+  .promo-section__video {
+    height: 320px;
+  }
+  .advantages-section__list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+  }
+  .advantages-section__list-item {
+    height: 270px;
+  }
+  .about-section__overlay {
+    min-height: 520px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .about-section__overlay-message {
+    position: static;
+    padding: 0;
+    background: none;
+    margin-right: auto;
+  }
+  .about-section__overlay-message:last-child {
+    margin-left: auto;
+    margin-right: 0;
+  }
+  .about-section__overlay-popup {
+    left: 0;
+    right: 0;
+    top: 100px;
+    margin: 0 auto;
+  }
+}
+@media (max-width: 625px) {
+  .promo-section__video-wrapper::before, .promo-section__video-wrapper::after {
+    width: 120px;
+    height: 120px;
+  }
+  .advantages-section {
+    padding-top: 18px;
+  }
+  .dev-section__list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: start;
+  }
+  .dev-section__list-item {
+    height: 240px;
+  }
+  .projects-section__wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+  }
+  .projects-section__tabs {
+    min-height: 160px;
+  }
+  .projects-section__swiper {
+    max-width: unset;
+  }
+  .owner-section__review {
+    padding: 0px 48px;
+  }
+}
+@media (max-width: 485px) {
+  .logo {
+    width: 96px;
+    height: auto;
+  }
+  .header__menu {
+    margin-left: auto;
+  }
+  .header__logo-year {
+    right: -24px;
+  }
+  .header__logo-year svg {
+    width: 18px;
+    height: 18px;
+  }
+  .header__tel-link {
+    margin-right: 0;
+    font-size: 14px;
+  }
+  .header__social-link {
+    margin: 0;
+  }
+  .header__social-link svg {
+    width: 24px;
+    height: 24px;
+  }
+  .header .ham {
+    width: 48px;
+    height: 48px;
+  }
+}
+@media (max-width: 425px) {
+  .contacts-section__info-body {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+  }
+  .projects-section__swiper {
+    height: 320px;
+  }
+  .heading {
+    font-size: 32px;
+    letter-spacing: -0.68px;
+  }
+}
+@media (max-width: 375px) {
+  .header__social-link {
+    display: none;
+  }
 }/*# sourceMappingURL=index.css.map */
