--- a/styles/index.css
+++ b/styles/index.css
@@ -1368,10 +1368,11 @@ body.no-scroll {
 .article-section__img {
   width: 100%;
   height: 684px;
-  -o-object-fit: contain;
-     object-fit: contain;
+  -o-object-fit: cover;
+     object-fit: cover;
   -o-object-position: center;
      object-position: center;
+  border-radius: 24px;
 }
 .article-section__text-content {
   max-width: 868px;
@@ -1671,6 +1672,7 @@ body.no-scroll {
 }
 .catalog-section__list-item-img {
   width: 100%;
+  height: 100%;
   -o-object-fit: contain;
      object-fit: contain;
   -o-object-position: center;
@@ -1697,7 +1699,15 @@ body.no-scroll {
 
 .item-section__wrapper {
   align-items: flex-start;
+  flex-direction: column;
   gap: 40px;
+}
+.item-section__row {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 24px;
 }
 .item-section__content {
   max-width: 733px;
@@ -2000,6 +2010,52 @@ body.no-scroll {
   .contacts-section__profile-text .contacts-section__profile-link {
     font-size: 16px;
   }
+  .breadcrumbs {
+    margin-bottom: 24px;
+  }
+  .breadcrumbs__link {
+    font-size: 16px;
+  }
+  .article-section__heading {
+    font-size: 32px;
+  }
+  .article-section__date {
+    font-size: 16px;
+    margin-bottom: 24px;
+  }
+  .article-section__img {
+    height: 480px;
+  }
+  .article-section__text-content h2 {
+    margin-top: 48px;
+    font-size: 32px;
+    margin-bottom: 24px;
+  }
+  .article-section__text-content p,
+  .article-section__text-content li {
+    font-size: 16px;
+  }
+  .article-section__text-content img {
+    margin-bottom: 32px;
+  }
+  .catalog-section__list-item-wrapper {
+    height: 320px;
+  }
+  .item-section__content-img {
+    max-width: 400px;
+    height: auto;
+  }
+  .item-section__text-content h2 {
+    margin-top: 48px;
+    margin-bottom: 24px;
+  }
+  .item-section__text-content p,
+  .item-section__text-content li {
+    font-size: 16px;
+  }
+  .item-section__text-content img {
+    margin-bottom: 32px;
+  }
 }
 @media (max-width: 1096px) {
   .header {
@@ -2013,6 +2069,15 @@ body.no-scroll {
   }
   .header__wrapper {
     padding-right: 0;
+  }
+  .catalog-section__wrapper {
+    gap: 24px;
+  }
+  .catalog-section__list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .catalog-section__list-item-img-wrapper {
+    height: 132px;
   }
 }
 @media (max-width: 1024px) {
@@ -2125,6 +2190,21 @@ body.no-scroll {
   .contacts-section__profile-text, .contacts-section__profile-link {
     font-size: 16px;
   }
+  .articles-section__date-filter-link {
+    font-size: 48px;
+  }
+  .articles-section__date-filter-link.active {
+    font-size: 72px;
+  }
+  .articles-section__list-item-img-wrapper {
+    height: 360px;
+  }
+  .articles-section__list-item-heading {
+    font-size: 28px;
+  }
+  .articles-section__pagination {
+    margin-top: 48px;
+  }
 }
 @media (max-width: 767px) {
   .promo-section__wrapper {
@@ -2167,6 +2247,61 @@ body.no-scroll {
     top: 100px;
     margin: 0 auto;
   }
+  .articles-section__date-filter-link {
+    font-size: 32px;
+  }
+  .articles-section__date-filter-link.active {
+    font-size: 48px;
+  }
+  .articles-section__list-item-img-wrapper {
+    height: 320px;
+  }
+  .articles-section__list-item-heading {
+    font-size: 20px;
+  }
+  .catalog-section__filters-heading {
+    font-size: 16px;
+  }
+  .catalog-section__list-item-wrapper {
+    padding: 12px 14px;
+  }
+  .catalog-section__filter-header {
+    font-size: 16px;
+  }
+  .catalog-section__filter-label {
+    font-size: 14px;
+  }
+  .catalog-section__filter-reset-btn {
+    font-size: 14px;
+  }
+  .item-section__content-img {
+    max-width: 240px;
+  }
+  .item-section__row {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+  }
+  .item-section__content-img {
+    max-width: 420px;
+  }
+}
+@media (max-width: 675px) {
+  .catalog-section__list {
+    grid-template-columns: 1fr;
+  }
+  .catalog-section__pagination {
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    margin-top: 48px;
+  }
+  .item-section__info-heading {
+    font-size: 28px;
+  }
+  .item-section__content-img {
+    height: 240px;
+  }
 }
 @media (max-width: 625px) {
   .promo-section__video-wrapper::before, .promo-section__video-wrapper::after {
@@ -2199,8 +2334,38 @@ body.no-scroll {
   .owner-section__review {
     padding: 0px 48px;
   }
+  .article-section__img {
+    height: 240px;
+  }
+  .article-section__text-content img {
+    margin: 16px 0;
+  }
+  .article-section__text-content h2 {
+    font-size: 24px;
+    margin-top: 16px;
+  }
+}
+@media (max-width: 575px) {
+  .catalog-section__filters {
+    max-width: 190px;
+  }
+}
+@media (max-width: 525px) {
+  .article-section__heading {
+    font-size: 28px;
+  }
 }
 @media (max-width: 485px) {
+  .catalog-section__wrapper {
+    flex-direction: column;
+  }
+  .catalog-section__filters {
+    max-width: unset;
+  }
+  .catalog-section__filters-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
   .logo {
     width: 96px;
     height: auto;
@@ -2244,6 +2409,22 @@ body.no-scroll {
   .heading {
     font-size: 32px;
     letter-spacing: -0.68px;
+  }
+  .breadcrumbs__link {
+    font-size: 12px;
+  }
+  .article-section__date {
+    font-size: 14px;
+  }
+  .catalog-section__wrapper {
+    flex-direction: column;
+  }
+  .catalog-section__filters {
+    max-width: unset;
+  }
+  .catalog-section__filters-list {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 @media (max-width: 375px) {
