removed sticky pos on 485p

--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -2224,6 +2224,7 @@
     }
     &__filters {
       max-width: unset;
+      position: static;
       &-list {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
