--- a/styles/index.css
+++ b/styles/index.css
@@ -326,8 +326,14 @@ body.no-scroll {
 
 .header {
   width: 100%;
-  margin-top: 22px;
-  margin-bottom: 164px;
+  padding-top: 22px;
+  padding-bottom: 24px;
+  margin-bottom: 140px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 99999;
+  background-color: #fff;
 }
 .header__wrapper {
   justify-content: space-between;
@@ -432,6 +438,10 @@ body.no-scroll {
   stroke-linecap: round;
 }
 
+.main {
+  margin-top: 230px;
+}
+
 .logo {
   width: 107px;
   height: 17.258px;
@@ -465,7 +475,6 @@ body.no-scroll {
   z-index: 20;
   padding: 32px;
   top: 67px;
-  display: flex;
   flex-direction: column;
   align-items: flex-end;
   justify-content: start;
@@ -476,6 +485,7 @@ body.no-scroll {
   opacity: 0;
   border-top: 1px solid rgba(153, 153, 153, 0.2);
   transition: 0.43s;
+  display: none;
 }
 .mobile-menu.active {
   transform: translateX(0%);
@@ -1526,7 +1536,7 @@ body.no-scroll {
   max-width: 250px;
   position: sticky;
   left: 0;
-  top: 0;
+  top: 96px;
   padding-top: 32px;
 }
 .catalog-section__filters-heading {
@@ -1611,6 +1621,7 @@ body.no-scroll {
   height: 16px;
   border-radius: 4px;
   border: 1px solid #ff7707;
+  flex-shrink: 0;
 }
 .catalog-section__filter-reset-btn {
   margin-top: 48px;
@@ -1787,6 +1798,9 @@ body.no-scroll {
      object-position: center;
 }
 .item-section__info {
+  position: sticky;
+  right: 0;
+  top: 96px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -2058,8 +2072,15 @@ body.no-scroll {
   }
 }
 @media (max-width: 1096px) {
+  .main {
+    margin-top: 100px;
+  }
+  .mobile-menu {
+    display: flex;
+  }
   .header {
-    margin-top: 0;
+    padding: 0;
+    margin: 0;
   }
   .header__btn, .header__nav {
     display: none;
